User account 1. Delete user account 2. Update user password 3. Update user profile and user avatar 4. change http verbs
