# app/Http/Controllers/Api/v1/User/EditProfileController.php
@@ -9,11 +9,9 @@ use App\Http\Requests\User\EditProfileFormRequest;
 
 class EditProfileController extends Controller
 {
-    public function __construct(private ImageUploadService $imageUploadService) {}
-
     /**
-     * @OA\Post(
-     *    path="/users/settings/accounts/update-profile",
+     * @OA\Patch(
+     *    path="/users/accounts/update-profile",
      *    tags={"users"},
      *    summary="Edit a user profile",
      *    description="Edit a user profile",
@@ -25,24 +23,12 @@ class EditProfileController extends Controller
      *            @OA\Property(property="fullname", type="string", example="justice chimobi"),
      *            @OA\Property(property="username", type="string", example="justice-chimobi"),
      *            @OA\Property(property="twitter", type="string", example="@justice-chimobi"),
-     *            @OA\MediaType(
-     *              mediaType="multipart/form-data",
-     *              @OA\Schema(
-     *                  @OA\Property(
-     *                      property="avatar",
-     *                      type="string",
-     *                      format="binary",
-     *                      description="avatar file to upload"
-     *                  )
-     *              )
-     *          )
      *            @OA\Property(property="gitHub", type="string", example="@/chimobi-justice"),
      *            @OA\Property(property="website", type="string", example="justice-chimobi.vercel.app"),
      *            @OA\Property(property="profile_headlines", type="string", example="Frontend Developer || React || Typescript || laravel"),
      *            @OA\Property(property="bio", type="string", example="shout bio about me"),
      *            @OA\Property(property="state", type="string", example="Ebonyi"),
-     *            @OA\Property(property="country", type="string", example="Nigeria"),
-     * 
+     *            @OA\Property(property="country", type="string", example="Nigeria")
      *        )
      *    ),
      *    @OA\Response(
@@ -62,14 +48,7 @@ class EditProfileController extends Controller
     */
     public function store(EditProfileFormRequest $request) {
         try {
-            $validated = $request->validated();
-
-            if ($request->hasFile('avatar')) {
-                $avatarUrl = $this->$imageUploadService->upload($request->file('avatar'));
-                $validated['avatar'] = $avatarUrl;
-            }
-
-            $request->user()->update($validated);
+            auth()->user()->update($request->validated());
 
             return response([
                 'message' => 'Profile updated successfully!'
